@@ -1,3 +1,11 @@
+1994-12-16  Thomas E. Dickey  <dickey@clark.net>
+
+	* src/dlog.c: guarded ifdef for <stdarg.h>
+
+	* src/dedview.c, src/ftree.c: corrected ifdef for addchnstr
+
+	* src/ded.h: guarded ifdef for <stdarg.h>
+
 1994-11-22  Thomas E. Dickey  <dickey@clark.net>
 
 	* src/ded.h: added quitVIEW
